# neural-networks-hw3

./: .gitignore  CMakeLists.txt  README.md
data/AutoEncoder/default_run/logs/: run_1024.csv  run_124.csv  run_512.csv  run_total2.csv  time_info.txt
data/AutoEncoder/master_run/40_0.000100/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run/40_0.000250/: run_1024.csv
data/AutoEncoder/master_run2/30_0.000500/: run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/2_0.000100/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/2_0.000250/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/2_0.000500/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/2_0.000750/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/2_0.001000/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/3_0.000100/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/3_0.000250/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/3_0.000500/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/3_0.000750/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/3_0.001000/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/master_run_mock/4_0.000100/: run_1024.csv  run_124.csv  run_512.csv
data/AutoEncoder/mlp_run/: run.csv  run_512.csv
data/PCA2/: log.csv  timing_info.txt
data/configs/depth_test/deep/: general.txt
data/configs/test/: general.txt
data/configs/test/layer_0/: biases.csv
data/configs/test/layer_1/: biases.csv  weights.csv
data/configs/test/layer_2/: biases.csv  weights.csv
data/configs/test/layer_3/: biases.csv
data/configs/test/layer_4/: biases.csv
data/configs/test/layer_5/: biases.csv
data/configs/test/logs/: run_1024.csv  run_124.csv  run_512.csv  run_fine_tune.csv  run_total2.csv  time_info.txt
data/python_scripts/: lock_batch_norm.eps  lock_batch_norm_enc_only.eps  lock_depth.eps  lock_lrelu.eps  lock_rate.eps  no_lock_depth.eps  nolock_depth.eps  nolock_linear.eps  nolock_lrelu.eps  nolock_mlp.eps  nolock_rate.eps  pca_plots.eps  plot_script.py
include/AutoEncoder/: AutoEncoder.hpp  Config.hpp  MSELayer.hpp  PCA.hpp  SSIMLayer.hpp
include/CommonLib/: basicFuncs.hpp  basicStructs.hpp  cifarHandlers.hpp  eventTimer.hpp
include/MLP/: ActivationFunctions.hpp  BaseLayer.hpp  BatchNormalization.hpp  FeedForwardLayer.hpp  Layer.hpp  LayerConfigs.hpp  MLP.hpp  Modifiers.hpp  Optimizer.hpp  SoftMaxLayer.hpp
jobs/: job_script.sh
jobs/configs/depth_test/deep/: aenc.txt  general.txt
jobs/configs/test/: general.txt
jobs/final_run/: aenc.txt  general.txt
jobs/final_run/logs/: run_1024.csv  run_124.csv  run_512.csv
src/AutoEncoder/: AutoEncoder.cpp  CMakeLists.txt  Config.cpp  MSELayer.cpp  PCA.cpp  SSIMLayer.cpp
src/CommonLib/: CMakeLists.txt  basicFuncs.cpp  cifarHandlers.cpp  eventTimer.cpp
src/MLP/: ActivationFunctions.cpp  BatchNormalization.cpp  CMakeLists.txt  FeedForwardLayer.cpp  Layer.cpp  MLP.cpp  Modifiers.cpp  Optimizer.cpp  SoftMaxLayer.cpp
test/: PCATest.cpp  autoEncoderTest.cpp  dummyTest.cpp
(+391 files in other folders)
